== 1.2.1

  * Better error reporting in case of lut.Doc path error.

== 1.2.0 2014-08-19

  * Added lut.Project to ease initial project files setup.
  * lut.Doc filter supports multiple values.
  * Fixed lut.Builder when using git tag.

== 1.1.1 2014-08-15

  * Using git tags to build lua rocks instead of github archives.

== 1.1.0 2014-08-15

  * Added lut.Builder to help generate build files for CMake, luadist and luarocks.
  * Fixed tests running when verbose is on.
  * Small changes to documentation.
  * Added support for 'filter' and 'prepend' in lut.Doc copy operation.
  * Fixed lub dependency information.

== 1.0.3 2014-01-26

  * Enable const declaration.
  * Enable table list element documentation.
  * Simplified CSS a little to ease reading table attributes.

== 1.0.2 2013-04-04

  * Rockspec and luadist fixes.

== 1.0.0 2013-04-03
  
  * Initial release.