@@ -35,7 +35,12 @@ dependencies = {
 {% end %}
 }
 build = {
-  type = 'builtin',
+  type = '{{BUILD.type or 'builtin'}}',
+{% if BUILD.type == 'cmake' then %}
+  variables = {
+    LUA_INSTALL_DIR = '/usr/local/lib/lua/5.1',
+  },
+{% else %}
   modules = {
     -- Plain Lua files
     {{string.format("[%-17s] = '%s/%s.lua'", "'"..type.."'", type, 'init')}},
@@ -101,6 +106,7 @@ idx = idx + 1 %}
     },
 {% end %}
   },
+{% end %}
 {% end %}
 }
 
